@@ -236,6 +236,12 @@ void Speech::talking( P_PLAYER pChar, const QString& lang, const QString& speech
 	if ( InputSpeech( socket, pChar, speech ) )
 		return;
 
+	// Squelched
+	if (pChar->isSquelched()) {
+		socket->clilocMessage(500168); // You cannot say anything, you have been squelched.
+		return;
+	}
+
 	// log
 	pChar->log( LOG_SPEECH, tr( "Saying '%1' (%2, 0x%3).\n" ).arg( speech ).arg( font ).arg( color, 0, 16 ) );
 
